code/admin/public/stylesheets/style.css
body {
  /*padding: 50px;*/
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

a {
  color: #00B7FF;
}

/*
.ng-isolate-scope {
	height: 100%;
	width: 100%
}*/


.btn {
    margin-right: 8px;
}

.angular-ui-tree-handle {
    background: #f8faff;
    border: 1px solid #dae2ea;
    color: #7c9eb2;
    padding: 10px 10px;
	max-height: 40px;
}

.angular-ui-tree-handle:hover {
    color: #438eb9;
    background: #f4f6f7;
    border-color: #dce2e8;
}

.angular-ui-tree-placeholder {
    background: #f0f9ff;
    border: 2px dashed #bed2db;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}


.group-title {
    background-color: #687074 !important;
    color: #FFF !important;
	max-height: 100px;
}

.category-title {    
    /*color: #FFF !important;	*/
	font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;	
	overflow:visible;
}

input.ng-invalid {
	border: 1px solid red;
}

input.ng-valid {
	border: 1px solid green;
}

.myGrid {
    width: 500px;
    height: 250px;
  }
  
.fleet_level_0 {
  background:#bbb;
  color:red;
}

.fleet_level_1 {
  background:#ddd;
  color:blue;
  margin-left:5px;
}

.fleet_level_2 {
  background:#fff;
  color:green;
  margin-left:10px;
}

.stop_name {
/*
	-ms-transform:rotate(270deg); 
  -moz-transform:rotate(270deg); 
  -webkit-transform:rotate(270deg); 
  -o-transform:rotate(270deg); */
  /*padding: 10px;*/
  color:blue;
}

.route_num {
	align: right;
}

.alert-success {
	background-color: #99FF66 !important;
	float: right;
	padding: 8px;
}

.alert-error {
	background-color: #FF3300 !important;
	float: right;
	padding: 8px;
}

.stretch {
}

.svcd_route {
font-weight:bold;
color:blue;
}

.unsvcd_route {
color:black;
}

.newtrip {
	border: 1px dashed #ff0000;
}

.myTrip {
	color: blue;
}

.unsettime {
	border: 1px dashed #ff0000;
}

.routeNum {
	font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
}
.stopName {
	font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
	white-space:pre-line;
	/*overflow:visible;*/
	/*word-wrap: break-word;*/
	
}


.routelist {
	height: 550px;
	/*height: 100%;*/
	/*overflow-x: scroll;*/
}
.stagetree {
	/*height: 500px*/
	height: 100%;
	overflow: scroll
}

.sched-grid {
	/*width: 100%;*/
	height: 100px;
}

.colt {
	padding:5px !important; 
	border:2px solid #ccc !important; 
	-webkit-border-radius: 5px;
    border-radius: 5px !important;
}

.angular-ui-tree-empty {
	min-height: 0px
}

.nav > li > a {
  position: relative;
  display: block;
  padding: 5px 10px;
}

